--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  margin-left: 244px;
+  margin-left: 254px;
 }
 
 .navigation-link {
@@ -117,7 +117,7 @@ body {
 
 .extra-icons {
   display: flex;
-  margin-right: 20px;
+  margin-right: 30px;
   list-style: none;
 }
 
@@ -201,14 +201,13 @@ body {
 }
 
 .description {
-  padding-top: 69px;
+  margin: 0;
+  padding: 69px 290px 25px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-  padding: 69px 290px 25px;
   text-align: center;
   text-transform: uppercase;
-  margin: 0;
 }
 
 .reasons {
@@ -237,7 +236,7 @@ body {
 
 .advantage-conteiner {
   width: 230px;
-  min-height: 181px;
+  min-height: 205px;
   display: flex;
   flex-direction: column;
   margin-top: auto;
@@ -245,15 +244,8 @@ body {
   padding: 90px 85px;
 }
 
-.advantage-title {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
 .advantage-divider {
+  margin-bottom: 30px;
   width: 60px;
   height: 2px;
   background: rgba(0, 0, 0, 0.3);
@@ -277,6 +269,8 @@ body {
 }
 
 .advantage-title {
+  margin-top: 12px;
+  margin-bottom: 22px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -284,7 +278,12 @@ body {
   text-transform: uppercase;
 }
 
+.advantages-list-item .advantage-title {
+  margin-top: 22px;
+}
+
 .advantage-description {
+  margin: 0;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -322,8 +321,28 @@ body {
 }
 
 .img-service {
-  width: auto;
-  margin: auto;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 26px;
+  height: 76px;
+  background-repeat: no-repeat;
+}
+
+.img-service.img-service-housing {
+  width: 76px;
+  background-image: url('../img/service-item-card_svg/housing.svg');
+  background-size: 76px 72px;
+}
+.img-service.img-service-food {
+  width: 75px;
+  background-image: url('../img/service-item-card_svg/food.svg');
+  background-size: 75px 70px;
+}
+.img-service.img-service-souvenir {
+  width: 65px;
+  background-image: url('../img/service-item-card_svg/souvenir.svg');
+  background-size: 65px 76px;
 }
 
 .heading {
@@ -341,17 +360,24 @@ body {
 }
 
 .descriptions {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 59px;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
   color: #333333;
-  margin-bottom: 64px;
+}
+
+.search .descriptions {
+  margin-bottom: 53px;
 }
 
 .service-list {
-  list-style: none;
   margin: 0;
   padding: 0;
+  padding-top: 6px;
+  list-style: none;
 }
 
 .service-item {
@@ -366,7 +392,6 @@ body {
 
 .service-item {
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
@@ -375,6 +400,8 @@ body {
 }
 
 .service-list-title {
+  margin: 0;
+  margin-bottom: 29px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -383,6 +410,7 @@ body {
 }
 
 .service-list-description {
+  margin: 0;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -394,6 +422,9 @@ body {
 }
 
 .search-catalog {
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -408,9 +439,6 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
-  padding: 0 50px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .search-catalog:hover {
@@ -452,9 +480,10 @@ body {
 
 .subscribe-input {
   display: block;
-  width: 452px;
+  width: 432px;
   height: 50px;
   background: #F2F2F2;
+  font-family: PT Sans;
   font-size: 18px;
   line-height: 24px;
   align-items: center;
@@ -470,6 +499,7 @@ body {
   font-size: 20px;
   line-height: 36px;
   text-align: center;
+  font-family: PT Sans;
   text-transform: uppercase;
   color: #FFFFFF;
   background: #82B3D3;
