--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,26 +124,26 @@ body {
 
 .extra-icons-item {
   margin-right: 24px;
+  position: relative;
 }
-
 .extra-icons-item:last-child {
   margin-right: 0;
-}
-
-.extra-icons-item:hover {}
-
-.icon-seach {
-  display: block;
-  width: 22px;
-  background-image: url("../img/search.png");
-  background-size: 22px 22px;
 }
 
 .icon-link {
   display: block;
   width: 22px;
-  position: relative;
+  height: 22px;
   text-decoration: none;
+  background-size: 20px 20px;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.icon-link-search {
+  background-image: url("../img/search.svg");
+}
+.icon-link-likes {
+  background-image: url("../img/heart.svg");
 }
 
 .icon-link-badge {
@@ -497,26 +497,30 @@ body {
 }
 
 .page-footer {
+  padding-top: 44px;
+  padding-bottom: 30px;
   display: flex;
   align-items: center;
-  min-height: 120px;
   justify-content: space-between;
 }
 
 .footer-social-list {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
   margin-left: 70px;
 }
 
-.img-social {
-  width: 20px;
-  height: 16px;
-  margin: 12px;
+.socials-item {
+  display: flex;
+  width: 46px;
+  height: 40px;
+}
+.socials-item-vk, .socials-item-tg, .socials-item-yt{
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .phone {
@@ -529,14 +533,22 @@ body {
   color: #000000;
 }
 
-.phone:hover {
-  color: blue;
+.phone:hover, .phone:focus {
+  color: #756157;
+}
+.phone:active{
+  color: rgba(117, 97, 87, 0.30);
 }
 
 .academy {
   margin-right: 70px;
 }
-
+.academy:hover, .academy :focus {
+  color: #756157;
+}
+.academy:active{
+  color: rgba(117, 97, 87, 0.30);
+}
 /* ниже стилизация catalog.html  */
 
 .main-inner {
@@ -575,7 +587,8 @@ body {
 }
 
 .breadcrumbs-item {
-  margin-right: 10px;
+  margin-right: 10px;s
+  position: relative;
 }
 
 .breadcrumbs-item:not(:last-child)::after {
@@ -584,7 +597,7 @@ body {
   width: 8px;
   height: 21px;
   top: 0;
-  right: -20px;
+  right: -6px;
   background-image: url(../img/catalog-breadcrum/Vector.svg);
   background-repeat: no-repeat;
 }
@@ -626,19 +639,26 @@ body {
 }
 
 .control {
+  display: flex;
   font-size: 18px;
   line-height: 23px;
   color: #FFFFFF;
+  cursor: pointer;
+  user-select: none;
 }
-
+.control-input {
+  margin: 0;
+  margin-right: 16px;
+}
 .control-input[type="checkbox"] {
   border-radius: 4px;
   background-color: #FFFFFF;
   appearance: none;
   width: 20px;
   height: 20px;
-  margin: 0;
   cursor: pointer;
+}
+.control-input[type="checkbox"]:checked {
   background-image: url(../img/catalog-filter/control=checkbox.png);
 }
 .control-input[type="radio"] {
@@ -647,8 +667,9 @@ body {
   appearance: none;
   width: 20px;
   height: 20px;
-  margin: 0;
   cursor: pointer;
+}
+.control-input[type="radio"]:checked {
   background-image: url(../img/catalog-filter/control=radio.png);
 }
 .catalog-filter-item {
@@ -765,8 +786,13 @@ body {
   margin: 40px auto 40px 70px;
 }
 
-.select-control {
+.catalog-select {
+  margin-right: 70px;
   width: 292px;
+  position: relative;
+}
+.select-control {
+  width: 100%;
   height: 49px;
   font-family: "PT Sans", sans-serif;
   border: 2px solid #E5E5E5;
@@ -774,14 +800,24 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
-  margin-right: 70px;
   background: none;
   padding: 0 20px;
+  appearance: none;
 }
-
-.select-control:hover .select-control:focus {
-  border-radius: 4px;
-  border: 2px solid #68A2CA;
+.catalog-select:after {
+  content: '';
+  display: block;
+  width: 12px;
+  height: 9px;
+  background-image: url('../img/caret.svg');
+  background-size: 12px 9px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  pointer-events: none;
+}
+.select-control:hover, .select-control:focus {
+  border-color: #68A2CA;
 }
 
 .catalog-sorting-views {
