--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1112,6 +1112,7 @@ body {
 
 /* Модальное окно */
 .modal-container {
+  padding: 20px;
   position: fixed;
   top: 0;
   left: 0;
@@ -1119,46 +1120,38 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
+  box-sizing: border-box;
 }
-
-
-
-.modal-auth {
+.modal-window {
   position: relative;
   margin: auto;
   background-color: #ffffff;
-  width: 717px;
+  width: 100%;
+  max-width: 717px;
   box-sizing: border-box;
-  max-height: 576;
   padding: 64px 70px;
   border-radius: 30px;
   background: #FFF;
   box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
-
-
 .modal-close-button {
   position: absolute;
   padding: 0;
-  width: 14px;
-  height: 14px;
-  top: 70px;
-  right: 70px;
-  background-color: #ffffff;
+  width: 52px;
+  height: 52px;
+  top: 64px;
+  right: 52px;
   border: none;
+  background-color: #F2F2F2;
   background-image: url(../img/modal/Vector.svg);
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  border-radius: 50%;
 }
-
-.modal-content {
-  display: flex;
-  flex-wrap: wrap;
-  width: 577px;
-}
-
 .modal-title {
+  margin: 0;
+  margin-bottom: 64px;
   font-family: PT Sans;
   font-size: 30px;
   font-style: normal;
@@ -1166,53 +1159,174 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
-  margin: 0;
-
 }
-
-.chek-in {
+.modal-row:not(:last-child) {
+  margin-bottom: 48px;
+}
+.modal-date {
   display: flex;
+  align-items: center;
 }
-
 .modal-label {
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
   text-transform: capitalize;
 }
-
-.modal-date-field {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
+.modal-peoples-count-info .modal-label {
+  margin-right: 10px;
 }
-
-.modal-input {
-  display: flex;
+.input {
+  margin: 0;
   padding: 12px 20px;
-  justify-content: space-between;
+  display: flex;
   align-items: center;
-  align-self: stretch;
+  width: 100%;
   border-radius: 4px;
-  background: var(--basic-light, #F2F2F2);
-  width: 400px;
-  height: auto;
+  background-color: #F2F2F2;
+  font-family: "PT Sans";
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 24px;
   border: none;
-  margin: 0;
+  box-sizing: border-box;
 }
-
-.date-state {
+.input:hover,
+.input:focus {
+  background-color: #E6E6E6;
+}
+.input:focus {
+  outline: 3px solid #83B3D3;
+}
+.input-counter {
+  display: flex;
+}
+.input-counter .input {
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+  width: 31px;
+  border-radius: 0;
+  z-index: 2;
+}
+.input-counter-button {
+  cursor: pointer;
+  display: block;
+  width: 40px;
+  height: 48px;
+  background-color: #F2F2F2;
+  border: none;
+  background-size: 20px 20px;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.input-counter-button:hover,
+.input-counter-button:focus {
+  background-color: #E6E6E6;
+}
+.input-counter-button:focus {
+  outline: 3px solid #83B3D3;
+}
+.input-counter-button-min {
+  background-image: url('../img/icon-minus.svg');
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.input-counter-button-max {
+  background-image: url('../img/icon-plus.svg');
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.modal-date .modal-label {
+  min-width: 137px;
+}
+.modal-date .date-input {
+  width: 100%;
+}
+.date-input {
+  position: relative;
+}
+.date-input-icon,
+.date-input-message {
   position: absolute;
-  top: 32px;
-  left: 157px;
+}
+.date-input-icon {
+  margin-top: -10px;
+  top: 50%;
+  right: 20px;
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url('../img/icon-date.svg');
+  background-size: 20px 20px;
+  pointer-events: none;
+}
+.date-input-message {
+  left: 20px;
+  top: 52px;
+  color: #333;
   font-size: 16px;
-  font-weight: 400;
   line-height: 21px;
+}
+.date-input-message-error {
   color: #FF5757;
-
+}
+.modal-peoples {
+  display: flex;
+  justify-content: space-between;
+}
+.modal-peoples-count {
+  display: flex;
+  align-items: center;
+}
+.modal-peoples-count-label {
+  margin-right: 46px;
+  display: flex;
+}
+.tooltip {
+  position: relative;
+}
+.tooltip-info {
+  cursor: help;
+  width: 26px;
+  height: 26px;
+  background-color: #83B3D3;
+  border-radius: 50%;
+  background-image: url('../img/icon-info.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.tooltip-popup {
+  margin-left: -128px;
+  padding-top: 15px;
+  padding-left: 22px;
+  padding-right: 18px;
+  padding-bottom: 18px;
+  position: absolute;
+  left: 50%;
+  top: 41px;
+  width: 256px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  box-sizing: border-box;
+  background-color: #333;
+  border-radius: 10px;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.30);
+  z-index: 100;
+}
+.tooltip-popup:before {
+  margin-left: -9.5px;
+  content: "";
+  position: absolute;
+  top: -9px;
+  left: 50%;
+  display: block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 9.5px 9px 9.5px;
+  border-color: transparent transparent #333 transparent;
 }
