--- a/11/styles/styles.css
+++ b/11/styles/styles.css
@@ -97,9 +97,13 @@ body {
   border-bottom: 2px solid transparent;
 }
 
-.navigation-link:hover {
-  border-color: #756257;
+.navigation-link:hover,
+.navigation-link.focus {
   opacity: 0.6;
+}
+
+.navigation-link.active {
+  border-color: #756257;
 }
 
 .navigation-item {
@@ -118,7 +122,7 @@ body {
 
 .extra-icons {
   display: flex;
-  margin-right: 30px;
+  margin-right: 28px;
   list-style: none;
 }
 
@@ -155,7 +159,7 @@ body {
   font-size: 10px;
   position: absolute;
   top: -11px;
-  right: -8px;
+  right: -4px;
 }
 
 .hero {
@@ -270,6 +274,7 @@ body {
   line-height: 21px;
   text-align: center;
   color: #333;
+  font-weight: 400;
 }
 
 .advantage--first .advantage-description {
@@ -302,13 +307,6 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-.service-item--housing {
-  display: block;
-  background-image: url("../img/service-item-card_svg/hause.svg");
-  background-repeat: no-repeat;
-  background-position: top 80px center;
 }
 
 .img-service {
@@ -353,6 +351,7 @@ body {
 }
 
 .descriptions {
+  font-weight: 400;
   margin: 0;
   margin-top: 20px;
   margin-bottom: 59px;
@@ -439,6 +438,7 @@ body {
 }
 
 .subscribe-input {
+  font-weight: 700;
   display: block;
   width: 432px;
   height: 50px;
@@ -451,8 +451,9 @@ body {
   border-radius: 4px 0 0 4px;
   border: none;
 }
+
 .page-footer {
-  padding-top: 44px;
+  padding-top: 43px;
   padding-bottom: 30px;
   display: flex;
   align-items: center;
@@ -464,7 +465,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-left: 70px;
+  margin-left: 73px;
 }
 
 .socials-item {
@@ -514,6 +515,7 @@ body {
 }
 
 .academy {
+  margin-top: 3px;
   margin-right: 70px;
 }
 
@@ -546,6 +548,7 @@ body {
   line-height: 78px;
   color: #FFFFFF;
   margin: 0;
+  margin-bottom: 6px;
 }
 
 .breadcrumbs {
@@ -582,6 +585,7 @@ body {
 .breadcrumbs-finish {
   line-height: 21px;
   color: #FFFFFF;
+  margin-left: 6px;
 }
 
 .catalog-filter-form {
@@ -591,7 +595,7 @@ body {
 .catalog-filter-group {
   padding: 0;
   margin: 0;
-  margin-right: 70px;
+  margin-right: 72px;
   border: none;
 }
 
@@ -654,9 +658,11 @@ body {
 .control-input[type="radio"]:checked {
   background-image: url(../img/catalog-filter/control=radio.png);
 }
-.control-input:hover{
-  opacity: 1;
+
+.control-input:hover {
+  opacity: 0.6;
 }
+
 .catalog-filter-item {
   margin-bottom: 16px;
 }
@@ -686,7 +692,7 @@ body {
 
 .input-price {
   display: block;
-  width: 143px;
+  width: 123px;
   height: 48px;
   padding: 0;
   font-size: 18px;
@@ -758,29 +764,30 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 40px;
-  margin-right: 70px;
+  padding: 50px 70px 40px 70px;
 }
 
 .catalog-sorting-subtitle {
+  margin: 0;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
-  margin: 40px auto 40px 70px;
+  margin-right: 194px;
 }
 
 .catalog-select {
-  margin-right: 70px;
+  margin-right: 60px;
   width: 292px;
   position: relative;
 }
 
 .select-control {
+  font-weight: 400;
   width: 100%;
   height: 49px;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   font-size: 18px;
@@ -812,10 +819,12 @@ body {
 .catalog-sorting-views {
   list-style: none;
   display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .view {
-  margin-right: 8px;
+  margin-right: 5px;
   width: 48px;
   height: 48px;
   display: flex;
@@ -825,6 +834,8 @@ body {
   background-size: 16px 14px;
   background-repeat: no-repeat;
   background-position: center center;
+  border: 2px solid   #E5E5E5;
+
 }
 
 .view:last-child {
@@ -832,12 +843,12 @@ body {
 }
 
 .view:hover {
-  outline: 2px solid #000000;
+  outline: 3px solid #000000;
+  opacity: 0.8;
 }
 
 .view:focus {
-  border-radius: 4px;
-  border: 2px solid #68A2CA;
+  outline: 2px solid #68A2CA;
 }
 
 .view-cards {
@@ -861,6 +872,7 @@ body {
   gap: 20px;
   margin-left: 70px;
   margin-bottom: 40px;
+  height: auto;
 }
 
 .hotels-item {
@@ -876,7 +888,7 @@ body {
   grid-column: 2 span;
 }
 
-.hotel-title {
+.hotel-link {
   display: grid;
   font-weight: 700;
   font-size: 24px;
@@ -887,17 +899,33 @@ body {
   margin: 0;
 }
 
+.hotel-title {
+  grid-column: 2 span;
+  margin: 0;
+  color: #000;
+  font-family: PT Sans;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 11px;
+  margin-top: 12px;
+}
+
 .hotels-type {
+  font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+  margin-top: 8px;
 }
 
 .hotels-price {
+  font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
   text-align: right;
+  margin-top: 8px;
 }
 
 .stars {
@@ -919,6 +947,8 @@ body {
 }
 
 .rate {
+  font-weight: 400;
+  display: flex;
   justify-content: center;
   align-items: center;
   line-height: 20px;
@@ -943,7 +973,7 @@ body {
   width: 1060px;
   height: 60px;
   list-style: none;
-  margin: 40px 70px 156px 70px;
+  margin: 30px 70px 156px 70px;
   padding: 0;
   list-style-type: none;
 }
@@ -960,11 +990,25 @@ body {
   height: 60px;
   background: #82B3D3;
   border-radius: 4px;
+  cursor: pointer;
+}
+
+.pagination-link:hover,
+.pagination-link:focus {
+  background-color: #68A2CA;
 }
 
 .pagination-current {
   background: #F2F2F2;
   color: #000000;
+  cursor: pointer;
+}
+
+.pagination-current:hover {
+  background: #F2F2F2;
+  color: #000000;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .subscribe-catalog .heading {
@@ -1009,8 +1053,10 @@ body {
 }
 
 /* Коричневая кнопка */
-.button-brown .button-big {
+.button-brown.button-big {
   width: 376px;
+  margin: auto;
+
 }
 
 .button-brown.button-small {
@@ -1058,6 +1104,8 @@ body {
 
 .button-blue.button-big {
   width: 577px;
+  height: 60px;
+  border-radius: 10px;
 }
 
 /* Зеленая кнопка */
@@ -1122,6 +1170,7 @@ body {
   background-color: rgba(0, 0, 0, 0.8);
   box-sizing: border-box;
 }
+
 .modal-window {
   position: relative;
   margin: auto;
@@ -1134,6 +1183,7 @@ body {
   background: #FFF;
   box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
+
 .modal-close-button {
   position: absolute;
   padding: 0;
@@ -1149,6 +1199,11 @@ body {
   cursor: pointer;
   border-radius: 50%;
 }
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
 .modal-title {
   margin: 0;
   margin-bottom: 64px;
@@ -1160,22 +1215,27 @@ body {
   text-transform: uppercase;
   color: #000000;
 }
+
 .modal-row:not(:last-child) {
   margin-bottom: 48px;
 }
+
 .modal-date {
   display: flex;
   align-items: center;
 }
+
 .modal-label {
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
   text-transform: capitalize;
 }
+
 .modal-peoples-count-info .modal-label {
-  margin-right: 10px;
+  margin-right:4px;
 }
+
 .input {
   margin: 0;
   padding: 12px 20px;
@@ -1193,65 +1253,87 @@ body {
   border: none;
   box-sizing: border-box;
 }
+
 .input:hover,
 .input:focus {
   background-color: #E6E6E6;
 }
+
 .input:focus {
   outline: 3px solid #83B3D3;
 }
+
 .input-counter {
   display: flex;
+  width: 111px;
+  position:relative;
 }
+
 .input-counter .input {
   padding-left: 0;
   padding-right: 0;
   text-align: center;
-  width: 31px;
-  border-radius: 0;
-  z-index: 2;
+  width: 100%;
 }
+
 .input-counter-button {
+  position: absolute;
   cursor: pointer;
   display: block;
-  width: 40px;
-  height: 48px;
-  background-color: #F2F2F2;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
   border: none;
   background-size: 20px 20px;
   background-position: center center;
   background-repeat: no-repeat;
+  border-radius: 4px;
+  top:50%;
+  margin-top: -10px;
+  opacity: .3;
 }
+
 .input-counter-button:hover,
 .input-counter-button:focus {
-  background-color: #E6E6E6;
+ opacity: 1;
 }
+
 .input-counter-button:focus {
-  outline: 3px solid #83B3D3;
+  border: 3px solid #83B3D3;
 }
+
 .input-counter-button-min {
   background-image: url('../img/icon-minus.svg');
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  left: 10px;
+
 }
+
 .input-counter-button-max {
   background-image: url('../img/icon-plus.svg');
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  right: 10px;
 }
+
 .modal-date .modal-label {
   min-width: 137px;
 }
+
 .modal-date .date-input {
   width: 100%;
 }
+
 .date-input {
   position: relative;
 }
+
 .date-input-icon,
 .date-input-message {
   position: absolute;
 }
+
 .date-input-icon {
   margin-top: -10px;
   top: 50%;
@@ -1263,6 +1345,7 @@ body {
   background-size: 20px 20px;
   pointer-events: none;
 }
+
 .date-input-message {
   left: 20px;
   top: 52px;
@@ -1270,37 +1353,44 @@ body {
   font-size: 16px;
   line-height: 21px;
 }
+
 .date-input-message-error {
   color: #FF5757;
 }
+
 .modal-peoples {
   display: flex;
   justify-content: space-between;
 }
+
 .modal-peoples-count {
   display: flex;
   align-items: center;
 }
+
 .modal-peoples-count-label {
   margin-right: 46px;
   display: flex;
 }
+
 .tooltip {
   position: relative;
 }
+
 .tooltip-info {
   cursor: help;
-  width: 26px;
+  width: 32px;
   height: 26px;
-  background-color: #83B3D3;
-  border-radius: 50%;
-  background-image: url('../img/icon-info.svg');
-  background-position: center center;
-  background-repeat: no-repeat;
+  border: none;
+}
+.tooltip-toggle{
+  border: none;
+  background-color: white;
+  cursor: help;
 }
 .tooltip-popup {
-  margin-left: -128px;
-  padding-top: 15px;
+  margin-left: -126px;
+  padding-top: 20px;
   padding-left: 22px;
   padding-right: 18px;
   padding-bottom: 18px;
@@ -1316,7 +1406,9 @@ body {
   border-radius: 10px;
   box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.30);
   z-index: 100;
+  display: none;
 }
+
 .tooltip-popup:before {
   margin-left: -9.5px;
   content: "";
@@ -1329,4 +1421,9 @@ body {
   border-style: solid;
   border-width: 0 9.5px 9px 9.5px;
   border-color: transparent transparent #333 transparent;
+}
+
+.tooltip-info:hover + .tooltip-popup,
+.tooltip-info:focus + .tooltip-popup {
+  display: block;
 }
